@@ -25,7 +25,6 @@ sig
     binary_ints: bool option,
     destroy_constrs: bool,
     specialize: bool,
-    skolemize: bool,
     star_linear_preds: bool,
     fast_descrs: bool,
     tac_timeout: Time.time option,
@@ -235,7 +234,6 @@ type hol_context = {
   binary_ints: bool option,
   destroy_constrs: bool,
   specialize: bool,
-  skolemize: bool,
   star_linear_preds: bool,
   fast_descrs: bool,
   tac_timeout: Time.time option,
